93: change order list for sort